# cerenkov

./: .gitignore
Old_Cerenkov/: analyze_cherenkov.C  cherenkov.cc
Old_Cerenkov/data/: Acrylic_ABS.txt  Acrylic_RINDEX.txt  Air_RINDEX.txt
Old_Cerenkov/include/: EventAction.hh  RunAction.hh
Old_Cerenkov/macros/: run.mac
Old_Cerenkov/src/: DetectorConstruction.cc  EventAction.cc
RealLife_cerenkov/: analyze_cherenkov.C
RealLife_cerenkov/data/: Water_ABS.txt
RealLife_cerenkov/include/: DetectorConstruction.hh  SteppingAction.hh
RealLife_cerenkov/macros/: run.mac
RealLife_cerenkov/src/: DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
cerenkov/: README.md  analyze_cherenkov.C
cerenkov/data/: Water_ABS.txt  Water_RAYLEIGH.txt
cerenkov/include/: EventAction.hh
cerenkov/macros/: run1.mac  run2.mac  vis.mac
cerenkov/src/: DetectorConstruction.cc  EventAction.cc  RunAction.cc  SteppingAction.cc
old_cerenkov/data/: SiPM_PDE.txt  Water_RINDEX.txt
old_cerenkov/include/: DetectorConstruction.hh  DetectorMessenger.hh
old_cerenkov/macros/: init_vis.mac
old_cerenkov/src/: DetectorMessenger.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
real_cerenkov/: CMakeLists.txt  README.md
real_cerenkov/data/: Gel_RINDEX.txt
real_cerenkov/include/: DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh
real_cerenkov/macros/: run.mac  run_Inside_Air.mac  run_Inside_Gel.mac  run_Outside_Air.mac  run_Outside_Gel.mac  vis.mac
real_cerenkov/src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  RunAction.cc  SteppingAction.cc
